k8s-manifests/deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contract-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: contract-backend
  template:
    metadata:
      labels:
        app: contract-backend
    spec:
      containers:
        - name: contract-backend
          image: YOUR_DOCKERHUB_USERNAME/contract-backend:latest
          ports:
            - containerPort: 8000
