k8s-manifests/deployment-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contract-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: contract-frontend
  template:
    metadata:
      labels:
        app: contract-frontend
    spec:
      containers:
        - name: contract-frontend
          image: YOUR_DOCKERHUB_USERNAME/contract-frontend:latest
          ports:
            - containerPort: 3000
