k8s-manifests/service-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: contract-backend-service
spec:
  selector:
    app: contract-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
