k8s-manifests/service-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: contract-frontend-service
spec:
  selector:
    app: contract-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
