k8s-manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contract-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: YOUR_DOMAIN
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: contract-backend-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: contract-frontend-service
                port:
                  number: 80
